# wasi-warden

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  hostd.toml
agent-core/: Cargo.toml
agent-core/src/: lib.rs
docs/: browser-login-task.md  getting-started.md  phase-1.md  status.md
docs/research/: Building a WASM-Based System Control Tool in Rust.docx  Secure Rust Wasm AI Agent.md
hostd/: Cargo.toml
hostd/src/: actions.rs  capabilities.rs  cli.rs  config.rs  logging.rs  main.rs  resources.rs  runtime.rs  state.rs
tools/wit-check/: Cargo.toml
tools/wit-check/src/: main.rs
wit/: agent.wit
