[package]
name = "hostd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasmtime = { version = "30.0.2", features = ["component-model", "async"] }
wasmtime-wasi = { version = "30.0.2" }
ureq = { version = "2.10.0", default-features = false, features = ["tls", "json"] }

[package.metadata.component]
# This line explicitly targets the WASI 0.2.0 command-line interface world (Preview 2)
target = "wasi:cli/command@0.2.0"
